--- a/site/old-news.html
+++ b/site/old-news.html
@@ -20,6 +20,18 @@
     <td>
       <dl>
   <dt>
+    <b>LilyPond 2.11.41 available</b> -
+    <em>February 25, 2008</em>
+  </dt>
+  <dd>
+    Release 2.11.41 is available. It has a few bugfixes, updated
+    program messages in French, German, Spanish and Vietnamese, and
+    updates to the MusicXML converter. (<a
+	href="http://code.google.com/p/lilypond/issues/list?can=1&amp;q=fixed_2_11_41&amp;colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes</a>,
+    <a href="install/#2.11">Download</a>)
+  </dd>
+
+  <dt>
     <b>LilyPond 2.11.37 available</b> -
     <em>January 3, 2008</em>
   </dt>
