Better inform about downloadable docball
The downloadable docball might also need to be advertised in the Doc
index, or in a new Docs usage page.

--- a/site/documentation.html
+++ b/site/documentation.html
@@ -87,12 +87,17 @@ small snippets of LilyPond code.
 
 <h2>Local documentation</h2>
 
-Documentation is installed in
+<p>The whole documentation can be downloaded as a bzipped tarball
+at <a href="install/">the download page</a>.
+</p>
+
+<p>If you have installed LilyPond from your GNU/Linux or Unix
+distribution, documentation is installed in
 <pre>
   <a href="file:///usr/share/doc/lilypond/">/usr/share/doc/lilypond</a>
 </pre>
 You may have to install a separate package such as <tt>lilypond-doc</tt>.
-
+</p>
 
 <h2>Support</h2>
 
