--- a/site/about/thanks.html
+++ b/site/about/thanks.html
@@ -56,6 +56,7 @@
   </li>
   <li>Francisco Vila and Daniel Tonda Castillo, Spanish translation.</li>
   <li>Till Rettig, German translation.</li>
+  <li>Yoshinobu Ishizaki, Japanese translation.</li>
 </ul>
 
 
