Updates to the German translation Mention the lilypondforum.de at more places, smaller nitpicks to the translation.

--- a/de/about/faq.html
+++ b/de/about/faq.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: 0d0c0f7d3aa17d622974c8cb80250ec32c389ff6
+    Translation of GIT Committish: eade1a16e1d4f70a9d65bea41e02013c65e9f903
 
 
 
@@ -394,7 +394,7 @@ Fragen beantwortet werden.
 <h3>K&ouml;nnt ihr diese Funktion f&uuml;r mich einbauen?</h3>
 
 <p>
-  Nat&uuml;lich! Lesen Sie das Kapitel <a href="../sponsor">Sponsoring</a> 
+  Nat&uuml;rlich! Lesen Sie das Kapitel <a href="../sponsor">Sponsoring</a> 
   f&uuml;r mehr Information &uuml;ber spezielle Funktionen.
 
   
