--- a/de/about/thanks.html
+++ b/de/about/thanks.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: 4e7730c56090e084cb594d438ab561b5106eed23
+    Translation of GIT Committish: eade1a16e1d4f70a9d65bea41e02013c65e9f903
 
 
 
@@ -61,14 +61,12 @@ Freizeit spielt er Bratsche oder programmiert.
 
 <ul>
 
-<li>Tineke de Munnik,  auf holl&auml;ndisch
-
+<li>Tineke de Munnik,  auf holl&auml;ndisch</li>
 <li>Jean-Charles Malahieude, Gauvain
-Pocentek and John Mandereau, auf franz&ouml;sisch
-
-</li>
+Pocentek und John Mandereau auf franz&ouml;sisch</li>
   <li>Francisco Vila und Daniel Tonda Castillo auf spanisch</li>
   <li>Till Rettig auf deutsch</li>
+  <li>Yoshinobu Ishizaki auf japanisch</li>
 
 <p>
 zur Verf&uuml;gung gestellt.
@@ -93,6 +91,6 @@ Benutzer. Besonders gro&szlig;en Dank an
 <li> Paul Roberts und James Ingram f&uuml;r Ratschl&auml;ge zum Musiksatz
 
 <li> <a href="http://www.stumptuous.com">Krista Scott-Dixon</a> f&uuml;r die Fotografie
-der Wasserlilie.
+der Seerose.
 
 </ul>
