--- a/de/documentation.html
+++ b/de/documentation.html
@@ -1,10 +1,6 @@
 <!--
-    Translation of GIT Committish: 733cf070f59accb8b7b406fe968d2a322fe59d4d
-
-
-
+    Translation of GIT Committish: eade1a16e1d4f70a9d65bea41e02013c65e9f903
   
-
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
     in README for details.
@@ -92,12 +88,18 @@ Zeilen LilyPond-Code hochladen.
 
 <h2>Lokale Dokumentation</h2>
 
-Die Dokumentation ist im Verzeichnis
+<p>Die gesamte Dokumentation kann als bzip-Tararchiv auf der
+at <a href="install/">Download-Seite</a> heruntergeladen werden.
+</p>
+
+<p>Wenn Sie LilyPond aus den Paketen Ihrer GNU/Linux- oder 
+Unix-Distribution installiert haben, findet sich die Dokumentation
+im Verzeichnis
 <pre>
   <a href="file:///usr/share/doc/lilypond/">/usr/share/doc/lilypond</a>
-</pre> installiert. Bei einigen Linux-Distributionen muss sie evtl. noch
+</pre>. Bei einigen Linux-Distributionen muss sie evtl. noch
 mit einem extra Paket (etwa <tt>lilypond-doc</tt>) nachinstalliert werden.
-
+</p>
 
 <h2>Unterst&uuml;tzung</h2>
 
