--- a/de/switch/advantages.html
+++ b/de/switch/advantages.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: a5a1b407ed5cebdf157d40599b4e7cf075cf037c
+    Translation of GIT Committish: eade1a16e1d4f70a9d65bea41e02013c65e9f903
 
 
 
@@ -102,11 +102,13 @@
   <dt>Hervorragende Unterst&uuml;tzung</dt>
   <dd>
     LilyPond l&auml;uft auf allen g&auml;ngigen Platformen: Linux, MacOS X, Windows.
-    Mit dem Programm werden ein 300 Seiten starkes Handbuch und &uuml;ber 400 Beispieldateien
+    Mit dem Programm werden ein 400 Seiten starkes Handbuch und &uuml;ber 400 Beispieldateien
     installiert. Es gibt eine aktive Benutzergemeinde, die Fragen &uuml;ber die 
     <a href="http://news.gmane.org/gmane.comp.gnu.lilypond.general">Lilypond-User</a>-Mailing-Liste
     beantwortet, w&auml;hrend das
     <a href="../about/thanks.html">Entwicklerteam</a> Probleme schnell und zuverl&auml;ssig l&ouml;st.
+    Auf deutsch helfen die Benutzer des <a href="http://www.lilypondforum.de">LilyPond-Forums</a>
+    sehr zuvorkommend.
   </dd>
 
 </dl>
