--- a/site/old-news.html
+++ b/site/old-news.html
@@ -30,6 +30,21 @@
   </dd>
 
   <dt>
+    <b>Comparison of music engraving with Finale and LilyPond</b> -
+    <em>February 25, 2008</em>
+  </dt>
+  <dd>
+    In three articles, Andrew Hawryluk compares Finale and LilyPond in
+    general terms, and evaluates in detail engraving capabilities of
+    both pieces of software.  The second article is an instructive
+    analysis of Rachmaninoff's Piano Prelude 6 engraving, including
+    comparisons with a reference hand-engraved edition.
+
+    <p><a href="http://www.musicbyandrew.ca/finale-lilypond-1.html">Read
+    the articles</a>.
+  </dd>
+
+  <dt>
     <b>LilyPond 2.11.41 available</b> -
     <em>February 25, 2008</em>
   </dt>
