--- a/fr/about/thanks.html
+++ b/fr/about/thanks.html
@@ -1,9 +1,5 @@
 <!--
-    Translation of GIT Committish: c4f2a2d5852b025cfd6001c3aaf71e671f2fcf14
-
-
-
-
+    Translation of GIT Committish: ba28417a402a4539bab93eb8137cd43d9ac919df
 
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
@@ -64,6 +60,7 @@
   </li>
   <li>Francisco Vila et Daniel Tonda Castillo, traduction espagnole,</li>
   <li>Till Rettig, traduction allemande.</li>
+  <li>Yoshinobu Ishizaki, traduction japonaise.</li>
 </ul>
 
 
