--- a/fr/documentation.html
+++ b/fr/documentation.html
@@ -1,5 +1,5 @@
 <!--
-    Translation of GIT Committish: 527978892e4f0953058a98ecc1d4c78c65543a87
+    Translation of GIT Committish: ba28417a402a4539bab93eb8137cd43d9ac919df
 
     When revising a translation, copy the HEAD committish of the
     version that you are working on.  Refer to `UPDATE A TRANSLATION'
@@ -88,13 +88,18 @@ et contribuer en ajoutant leurs propres extraits de code.
 
 <h2>Documentation locale</h2>
 
-La documentation est install&eacute;e dans le dossier
+<p>L'int&eacute;grale de la documentation est disponible sous la forme d'une
+  archive compress&eacute;e au format bzip sur la <a href="install/">page des
+  t&eacute;l&eacute;chargements</a>.
+</p>
+<p>Dans le cas d'une installation de LilyPond &agrave; partir d'une
+  distribution GNU/Linux ou Unix, la documentation est install&eacute;e dans le dossier
 <pre>
-  <a
-href="file:///usr/share/doc/lilypond/">/usr/share/doc/lilypond</a>
-</pre> Il se peut que vous ayez &agrave; installer un paquet additionnel tel
+  <a href="file:///usr/share/doc/lilypond/">/usr/share/doc/lilypond</a>
+</pre> 
+ Il se peut que vous ayez &agrave; installer un paquet additionnel tel
 que <tt>lilypond-doc</tt>.
-
+</p>
 
 <h2>Support</h2>
 
