--- a/site/old-news.html
+++ b/site/old-news.html
@@ -20,6 +20,19 @@
     <td>
       <dl>
   <dt>
+    <b>LilyPond 2.11.43 available</b> -
+    <em>March 31, 2008</em>
+  </dt>
+  <dd>
+    Release 2.11.43 has been available since March 27. It fixes a
+    couple of formatting bugs, and the font cache problem with
+    MS-Windows binaries which caused excessive slowness has been
+    fixed. <a
+      href="http://code.google.com/p/lilypond/issues/list?can=1&amp;q=fixed_2_11_43&amp;colspec=ID+Type+Status+Priority+Milestone+Owner+Summary">Bugfixes</a>,
+    <a href="install/#2.11">Download</a>.
+  </dd>
+
+  <dt>
     <b>LilyPond 2.11.42 available</b> -
     <em>March 9, 2008</em>
   </dt>
