Added a info-lilypond RSS feed on the home page
The RSS button only appears on Home; the URL can
be defined in format-page.py as well as its title.
Currently the only way to get a feed from the mailing
list is through Nabble.com; hopefully someday we'll
have something cleaner.

--- a/es/index.html
+++ b/es/index.html
@@ -155,5 +155,7 @@ de <tt>lilypond.org</tt>
     <img border="0"
          src="http://www.w3.org/Icons/valid-html401"
          alt="Valid HTML 4.01!" height="25" width="70"></a>
+  <br>
+  <a class="rss_logo" href="@RSS@">RSS</a>
 </p>
 
