--- a/de/index.html
+++ b/de/index.html
@@ -158,5 +158,7 @@
     <img border="0"
          src="http://www.w3.org/Icons/valid-html401"
          alt="Valid HTML 4.01!" height="25" width="70"></a>
+  <br>
+  <a class="rss_logo" href="@RSS@">RSS</a>
 </p>
 
