Forgot to update old-news.html
Sorry for the Japanese translator!

--- a/site/old-news.html
+++ b/site/old-news.html
@@ -19,6 +19,14 @@
   <tr>
     <td>
       <dl>
+  <dt><b>lilypond.org日本語訳 (lilypond.org Japanese translation)</b> - <em>2008年4月8日</em></dt>
+
+  <dd>
+
+    Lilypond.orgのいくつかのページの日本語訳が出来ました。
+
+  </dd>
+
   <dt>
     <b>LilyPond 2.11.43 available</b> -
     <em>March 31, 2008</em>
