Thinko: rename news page include in translations

--- a/es/index.html
+++ b/es/index.html
@@ -87,7 +87,7 @@
   <tr>
     <td class="news" colspan="2">
 
-      @news.ihtml@
+      @top-news.ihtml@
 
       <p class="teaser">
 	<a href="old-news.html">noticias anteriores...</a>
