--- a/fr/index.html
+++ b/fr/index.html
@@ -93,7 +93,7 @@
   <tr>
     <td class="news" colspan="2">
 
-      @news.ihtml@
+      @top-news.ihtml@
 
       <p class="teaser">
 	<a href="old-news.html">actualit&eacute;s pass&eacute;es...</a>
