--- a/ja/index.html
+++ b/ja/index.html
@@ -86,7 +86,7 @@
   <tr>
     <td class="news" colspan="2">
 
-      @news.ihtml@
+      @top-news.ihtml@
 
       <p class="teaser">
 	<a href="old-news.html">古いニュース</a>
