--- a/nl/index.html
+++ b/nl/index.html
@@ -90,7 +90,7 @@
   <tr>
     <td class="news" colspan="2">
 
-      @news.ihtml@
+      @top-news.ihtml@
 
       <p class="teaser">
 	<a href="old-news.html">ouder nieuws...</a>
